# tfhesql-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
tfhesql/: Cargo.toml  README.md
tfhesql-cli/: Cargo.toml  README.md
tfhesql-cli/src/: main.rs
tfhesql/benches/: benchmark.rs
tfhesql/examples/: api-clear.rs  api-enc.rs  bounty.rs
tfhesql/src/: ascii.rs  bitops.rs  bounty_api.rs  csv.rs  default_into.rs  error.rs  lib.rs  optimized_bool.rs  stats.rs  types.rs
tfhesql/src/client/: mod.rs  sql_client.rs
tfhesql/src/encrypt/: mod.rs  traits.rs
tfhesql/src/hi_lo_tree/: block_chunck.rs  eq_gt.rs  eq_gt_lt.rs  eq_ne.rs  equ.rs  fill.rs  hi_lo_logic_op.rs  mod.rs  u64_hi_lo_logic_op_tree.rs  zero_max.rs
tfhesql/src/maps/: indexed_map.rs  mod.rs  traits.rs  u16_map.rs  u8_map.rs  uint_map.rs
tfhesql/src/query/: mod.rs  optional_bool_tree.rs  sql_query.rs  sql_query_binops.rs  sql_query_tree.rs  sql_query_value.rs  sql_result.rs  sql_result_options.rs
tfhesql/src/server/: distinct.rs  ident_compare_with.rs  ident_op_ident.rs  ident_op_value.rs  ident_op_value_builder.rs  mod.rs  sql_server.rs  sql_stats.rs
tfhesql/src/sql_ast/: and_or_ast.rs  bitop_mask.rs  column_ident.rs  comparator_mask.rs  data_ident.rs  data_sig.rs  data_type.rs  data_value.rs  helpers.rs  mod.rs  num_op_rewriter.rs  parser.rs  range_optimizer.rs  to_parenthesized_string.rs  where_validator.rs
tfhesql/src/sql_ast/tests/: compiler.rs
tfhesql/src/table/: ascii_cache.rs  block_iter.rs  byte_rows.rs  cmp.rs  eq_gt_lt_type_cache.rs  mod.rs  row_visitor.rs  schema.rs  type_cache.rs
tfhesql/src/test/: clear_db.rs  clear_one_col.rs  clear_simple_tables_x_3.rs  enc_db.rs  mod.rs  simple_batch.rs  simple_queries.rs  triv_db.rs  triv_one_col.rs
tfhesql/src/test/keys_loader/: mod.rs  v2.rs
tfhesql/src/test_util/: keys_loader.rs  mod.rs
tfhesql/src/uint/: block.rs  block_iter.rs  block_map.rs  block_pow2_array.rs  byte_array.rs  byte_mask.rs  interval.rs  mod.rs  pow2.rs  signed_u64.rs  to_hilo.rs  to_uint.rs  triangular_matrix.rs
tfhesql/src/utils/: arrow.rs  mod.rs  path.rs  rayon.rs
tfhesql/test/: data.csv
tfhesql/test/csv/: data2.csv
tfhesql/test/data/medium/: Categories.csv  Customers.csv
tfhesql/test/data/numbers/: Numbers.csv
tfhesql/test/data/small/: Categories.csv  Customers.csv
tfhesql/test/data/tiny/: Categories.csv  Customers.csv
tfhesql/test/data/tiny-numbers/: Numbers.csv
tfhesql/test/queries/: query-eq-u8.txt  query-eq.txt  query-in.txt  query-num-3.txt
