[workspace]
members = [
    "tfhesql-cli",
    "tfhesql",
]
resolver = "2"

[workspace.package]
authors = ["Alexandre Belhoste <alexandre.belhoste@gmail.com>"]
version= "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["TFHE-rs", "fully", "homomorphic", "encryption", "fhe", "cryptography", "sql"]
homepage = "https://github.com/0xalexbel/tfhesql-rs/"
repository = "https://github.com/0xalexbel/tfhesql-rs/"
description = "A pure Rust library for executing simple FHE-encrypted SQL queries on a clear database using ZAMA TFHE-rs Rust library."

[workspace.dependencies]
tfhe = { version = "0.5.1", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }

[profile.dev.package."*"]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
