[package]
name = "tfhesql-cli"
description = "A basic CLI for running small SQL SELECT requests using tfhesql on .csv databases."
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }

[dependencies]
tfhesql = { path = "../tfhesql", features=["parallel", "stats"] }
tfhe = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"

