[package]
name = "tfhesql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8.5" }

[dependencies]
tfhe = { version = "0.5.1", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
rayon = { version = "1.8.1" }
serde_json = { version = "1.0.113" }
serde = { version = "1.0.194" }
bincode = { version = "1.3.3" }
arrow-array = { version = "51.0.0" }
arrow-csv = { version = "51.0.0" }
arrow-schema = { version = "51.0.0", features = ["serde"] }
arrow-cast = { version = "51.0.0", features = ["prettyprint"] }
sqlparser = { version = "0.44.0", features = ["visitor"] }
flate2 = { version = "1.0.30" }

[profile.dev.package."*"]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["parallel"]
parallel = []
stats = []

