[package]
name = "tfhesql"
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8.5" }

[dependencies]
tfhe = { workspace = true }
rayon = { version = "1.8.1" }
serde_json = { version = "1.0.113" }
serde = { version = "1.0.194" }
bincode = { version = "1.3.3" }
arrow-array = { version = "51.0.0" }
arrow-csv = { version = "51.0.0" }
arrow-schema = { version = "51.0.0", features = ["serde"] }
arrow-cast = { version = "51.0.0", features = ["prettyprint"] }
sqlparser = { version = "0.44.0", features = ["visitor"] }
flate2 = { version = "1.0.30" }
regex = { version = "1.10.4" }

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["parallel"]
parallel = []
stats = []

